Bluewolf SFMTA/src/objects/Scheduled_Appointment_Details__c.object
<CustomObject>
    <description>Related to the &quot;Appointment&quot; Object for passing the &quot;Start Time&quot; field details to a related Case record.</description>
    <fields>
        <fullName>Appointment_Object_Record_ID__c</fullName>
        <label>Appointment Object Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates to the Appointment Object</description>
        <label>Appointment</label>
        <referenceTo>Appointment__c</referenceTo>
        <relationshipLabel>Scheduled Appointment Details</relationshipLabel>
        <relationshipName>Scheduled_Appointment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Object_Record_ID__c</fullName>
        <description>Case ID of Case Object records created via Form Assembly.</description>
        <label>Case Object Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Field_for_Trigger__c</fullName>
        <label>Text Field for Trigger</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Scheduled Appointment Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Object_Record_ID__c</columns>
        <columns>Appointment_Object_Record_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Appointment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Appointment Scheduling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Appointment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>